--- a/notebook/laptop-price-predictor_model_training.ipynb
+++ b/notebook/laptop-price-predictor_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "7535eccd-f71b-4a37-aacd-40f59935fd9e",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "6bc36edc-575a-4dce-93f0-c85f02cf9a97",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "5e41f99c-bda0-4ce4-9a2c-4873c09c3a0e",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "4  226.983005  Intel Core i5    0  256     Intel                 Mac  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "74c33e5a-5245-4884-90af-33ece589cfae",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "170b7e59-fc30-469f-aeda-123f77bac7cd",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "4aa2472b-7d2c-4619-bb8e-376df7e16d20",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "4  Intel Core i5    0  256     Intel                 Mac  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "337fae3c-cc3f-4aa6-9921-fcb586baad21",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "1d59b0c5-d7ce-481c-ba34-f092d642c6c1",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "Name: Price, Length: 1302, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "2ce1b328",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "2d86c27d",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "5e3f19c8-f50b-493b-9b47-6e7603caf92e",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
        "((1106, 38), (196, 38))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "ab571d0b",
    "metadata": {},
    "outputs": [],
@@ -499,10 +499,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "619b3d5c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Apurva\\STUDY\\Data science\\PricePrediction\\py38_pricePredictor\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:628: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 3.556e+10, tolerance: 1.518e+08\n",
+      "  model = cd_fast.enet_coordinate_descent(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -522,79 +530,79 @@
       "\n",
       "Lasso\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 17402.6783\n",
-      "- Mean Absolute Error: 12308.1845\n",
+      "- Root Mean Squared Error: 17402.5204\n",
+      "- Mean Absolute Error: 12310.2698\n",
       "- R2 Score: 0.7793\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 18647.9443\n",
-      "- Mean Absolute Error: 12824.7031\n",
-      "- R2 Score: 0.7620\n",
+      "- Root Mean Squared Error: 18655.9930\n",
+      "- Mean Absolute Error: 12829.3670\n",
+      "- R2 Score: 0.7618\n",
       "===================================\n",
       "\n",
       "\n",
       "Ridge\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 17437.1056\n",
-      "- Mean Absolute Error: 12333.6754\n",
-      "- R2 Score: 0.7784\n",
+      "- Root Mean Squared Error: 17802.9657\n",
+      "- Mean Absolute Error: 12576.1534\n",
+      "- R2 Score: 0.7690\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 18716.7517\n",
-      "- Mean Absolute Error: 12876.3726\n",
-      "- R2 Score: 0.7603\n",
+      "- Root Mean Squared Error: 19335.1839\n",
+      "- Mean Absolute Error: 13101.2331\n",
+      "- R2 Score: 0.7442\n",
       "===================================\n",
       "\n",
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 16573.3251\n",
-      "- Mean Absolute Error: 10556.4396\n",
-      "- R2 Score: 0.7998\n",
+      "- Root Mean Squared Error: 14220.7779\n",
+      "- Mean Absolute Error: 8834.0946\n",
+      "- R2 Score: 0.8526\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 22472.3756\n",
-      "- Mean Absolute Error: 13561.0485\n",
-      "- R2 Score: 0.6544\n",
+      "- Root Mean Squared Error: 24547.1802\n",
+      "- Mean Absolute Error: 14273.2852\n",
+      "- R2 Score: 0.5876\n",
       "===================================\n",
       "\n",
       "\n",
       "Decision Tree\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2969.8514\n",
-      "- Mean Absolute Error: 795.8522\n",
-      "- R2 Score: 0.9936\n",
+      "- Root Mean Squared Error: 12167.0151\n",
+      "- Mean Absolute Error: 8104.3213\n",
+      "- R2 Score: 0.8921\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 18640.5831\n",
-      "- Mean Absolute Error: 11665.8445\n",
-      "- R2 Score: 0.7622\n",
+      "- Root Mean Squared Error: 17795.4225\n",
+      "- Mean Absolute Error: 11802.2672\n",
+      "- R2 Score: 0.7833\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 6807.8575\n",
-      "- Mean Absolute Error: 4142.8972\n",
-      "- R2 Score: 0.9662\n",
+      "- Root Mean Squared Error: 10179.4374\n",
+      "- Mean Absolute Error: 6442.4063\n",
+      "- R2 Score: 0.9245\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 16053.6801\n",
-      "- Mean Absolute Error: 9856.2932\n",
-      "- R2 Score: 0.8236\n",
+      "- Root Mean Squared Error: 17014.2055\n",
+      "- Mean Absolute Error: 10466.3752\n",
+      "- R2 Score: 0.8019\n",
       "===================================\n",
       "\n",
       "\n",
       "XGBRegressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 4485.1740\n",
-      "- Mean Absolute Error: 2845.9506\n",
-      "- R2 Score: 0.9853\n",
+      "- Root Mean Squared Error: 6350.6398\n",
+      "- Mean Absolute Error: 4508.3322\n",
+      "- R2 Score: 0.9706\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 15159.0818\n",
-      "- Mean Absolute Error: 9758.8802\n",
-      "- R2 Score: 0.8427\n",
+      "- Root Mean Squared Error: 15342.6360\n",
+      "- Mean Absolute Error: 10294.6742\n",
+      "- R2 Score: 0.8389\n",
       "===================================\n",
       "\n",
       "\n",
@@ -613,14 +621,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 23026.1402\n",
-      "- Mean Absolute Error: 20034.0175\n",
-      "- R2 Score: 0.6136\n",
+      "- Root Mean Squared Error: 19848.0820\n",
+      "- Mean Absolute Error: 15997.4802\n",
+      "- R2 Score: 0.7129\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 24648.7332\n",
-      "- Mean Absolute Error: 20941.8919\n",
-      "- R2 Score: 0.5842\n",
+      "- Root Mean Squared Error: 20917.1476\n",
+      "- Mean Absolute Error: 16559.5591\n",
+      "- R2 Score: 0.7006\n",
       "===================================\n",
       "\n",
       "\n"
@@ -630,14 +638,18 @@
    "source": [
     "models = {\n",
     "    \"Linear Regression\": LinearRegression(),\n",
-    "    \"Lasso\": Lasso(),\n",
-    "    \"Ridge\": Ridge(),\n",
-    "    \"K-Neighbors Regressor\": KNeighborsRegressor(),\n",
-    "    \"Decision Tree\": DecisionTreeRegressor(),\n",
-    "    \"Random Forest Regressor\": RandomForestRegressor(),\n",
-    "    \"XGBRegressor\": XGBRegressor(), \n",
+    "    \"Lasso\": Lasso(alpha=0.001),\n",
+    "    \"Ridge\": Ridge(alpha=10),\n",
+    "    \"K-Neighbors Regressor\": KNeighborsRegressor(n_neighbors=3),\n",
+    "    \"Decision Tree\": DecisionTreeRegressor(max_depth=8),\n",
+    "    \"Random Forest Regressor\": RandomForestRegressor(n_estimators=100,\n",
+    "                              random_state=3,\n",
+    "                              max_samples=0.5,\n",
+    "                              max_features=0.75,\n",
+    "                              max_depth=15),\n",
+    "    \"XGBRegressor\": XGBRegressor(n_estimators=45,max_depth=5,learning_rate=0.5), \n",
     "    \"CatBoosting Regressor\": CatBoostRegressor(verbose=False),\n",
-    "    \"AdaBoost Regressor\": AdaBoostRegressor()\n",
+    "    \"AdaBoost Regressor\": AdaBoostRegressor(n_estimators=15,learning_rate=1.0)\n",
     "}\n",
     "model_list = []\n",
     "r2_list =[]\n",
@@ -686,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "749d630f",
    "metadata": {},
    "outputs": [
@@ -724,22 +736,22 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>XGBRegressor</td>\n",
-       "      <td>0.842738</td>\n",
+       "      <td>0.838907</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.823629</td>\n",
+       "      <td>0.801893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.762208</td>\n",
+       "      <td>0.783283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Lasso</td>\n",
-       "      <td>0.762021</td>\n",
+       "      <td>0.761815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -749,17 +761,17 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ridge</td>\n",
-       "      <td>0.760261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>K-Neighbors Regressor</td>\n",
-       "      <td>0.654399</td>\n",
+       "      <td>0.744157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.584217</td>\n",
+       "      <td>0.700579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K-Neighbors Regressor</td>\n",
+       "      <td>0.587636</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -768,17 +780,17 @@
       "text/plain": [
        "                Model Name  R2_Score\n",
        "7    CatBoosting Regressor  0.863109\n",
-       "6             XGBRegressor  0.842738\n",
-       "5  Random Forest Regressor  0.823629\n",
-       "4            Decision Tree  0.762208\n",
-       "1                    Lasso  0.762021\n",
+       "6             XGBRegressor  0.838907\n",
+       "5  Random Forest Regressor  0.801893\n",
+       "4            Decision Tree  0.783283\n",
+       "1                    Lasso  0.761815\n",
        "0        Linear Regression  0.761815\n",
-       "2                    Ridge  0.760261\n",
-       "3    K-Neighbors Regressor  0.654399\n",
-       "8       AdaBoost Regressor  0.584217"
+       "2                    Ridge  0.744157\n",
+       "8       AdaBoost Regressor  0.700579\n",
+       "3    K-Neighbors Regressor  0.587636"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "a5302155",
    "metadata": {},
    "outputs": [
@@ -827,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "345029ba",
    "metadata": {},
    "outputs": [
@@ -850,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "68406607",
    "metadata": {},
    "outputs": [
